--- a/vue-chess/index.html
+++ b/vue-chess/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>VueJsChess</title>
+    <title>VueJsChess Demo4</title>
   </head>
   <body >
   <div id="app"></div>
